--- a/dynamic-table-row.html
+++ b/dynamic-table-row.html
@@ -23,6 +23,7 @@
       }
       table {
         border-collapse: collapse;
+        text-align: center;
       }
       table td,
       table th {
@@ -62,6 +63,34 @@
       </thead>
       <tbody></tbody>
     </table>
-    <script></script>
+    <script>
+      const formEl = document.querySelector("form");
+      const tbodyEl = document.querySelector("tbody");
+      const tableEl = document.querySelector("table");
+      function onAddWebsite(e) {
+        e.preventDefault();
+        const website = document.getElementById("website").value;
+        const url = document.getElementById("url").value;
+        tbodyEl.innerHTML += `
+            <tr>
+                <td>${url}</td>
+                <td>${website}</td>
+                <td><button class="deleteBtn">Delete</button></td>
+            </tr>
+        `;
+      }
+
+      function onDeleteRow(e) {
+        if (!e.target.classList.contains("deleteBtn")) {
+          return;
+        }
+
+        const btn = e.target;
+        btn.closest("tr").remove();
+      }
+
+      formEl.addEventListener("submit", onAddWebsite);
+      tableEl.addEventListener("click", onDeleteRow);
+    </script>
   </body>
 </html>
