adding fetch api vid

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
           >Dynamically add and remove table rows with javsacript project</a
         >
       </li>
+      <li>
+        <a
+          href="https://phptuts.github.io/js-video-projects/fetch-api-with-json.html"
+          >How to use the fetch api with a get request</a
+        >
+      </li>
     </ul>
   </body>
 </html>
