--- a/fetch-api-post.html
+++ b/fetch-api-post.html
@@ -76,6 +76,32 @@
         </div>
       </div>
     </div>
-    <script></script>
+    <script>
+      const url = "https://hookb.in/6Jpom3WKwquLbb031X6E";
+      const formEl = document.querySelector("form");
+      formEl.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const formData = new FormData(formEl);
+        const formDataSerialized = Object.fromEntries(formData);
+        const jsonObject = {
+          ...formDataSerialized,
+          sendToSelf: formDataSerialized.sendToSelf ? true : false,
+        };
+        try {
+          const response = await fetch(url, {
+            method: "POST",
+            body: JSON.stringify(jsonObject),
+            headers: {
+              "Content-Type": "application/json",
+            },
+          });
+          const json = await response.json();
+          console.log(json);
+        } catch (e) {
+          console.error(e);
+          alert("there as an error");
+        }
+      });
+    </script>
   </body>
 </html>
