committing the final parts

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
           >How to use the fetch api with a get request</a
         >
       </li>
+      <li>
+        <a
+          href="https://phptuts.github.io/js-video-projects/fetch-api-post-json.html"
+        >
+          How to use the fetch api with a get request</a
+        >
+      </li>
     </ul>
   </body>
 </html>
