--- a/fetch-api-post-json.html
+++ b/fetch-api-post-json.html
@@ -1,69 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google Fonts -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic"
+    />
+
+    <!-- CSS Reset -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+
+    <!-- Milligram CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"
+    />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fetch Api With Json</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap"
-      rel="stylesheet"
-    />
+    <title>Fetch Api Post</title>
     <style>
-      body {
-        font-family: "Roboto", sans-serif;
-      }
       h1 {
         text-align: center;
-      }
-      button {
-        display: block;
-        margin: 20px auto;
-        border: none;
-        border-radius: none;
-        font-size: 20px;
-      }
-      .quote {
-        border: solid 1px black;
-        padding: 10px;
-        margin: 10px;
-      }
-      #error {
-        text-align: center;
-        color: red;
-        display: none;
       }
     </style>
   </head>
   <body>
-    <h1>Famous Quotes</h1>
-    <section id="quotes"></section>
-    <p id="error">There was an error fetching the request.</p>
+    <div class="container">
+      <div class="row">
+        <div class="column">
+          <h1>How to send a post request using fetch</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
+          <form>
+            <fieldset>
+              <label for="nameField">Name</label>
+              <input
+                name="name"
+                type="text"
+                placeholder="CJ Patoilo"
+                id="nameField"
+              />
+              <label for="ageRangeField">Age Range</label>
+              <select name="age" id="ageRangeField">
+                <option value="0-13">0-13</option>
+                <option value="14-17">14-17</option>
+                <option value="18-23">18-23</option>
+                <option value="24+">24+</option>
+              </select>
+              <label for="commentField">Comment</label>
+              <textarea
+                placeholder="Hi CJ …"
+                name="comment"
+                id="commentField"
+              ></textarea>
+              <div class="float-right">
+                <input
+                  name="sendToSelf"
+                  value="1"
+                  type="checkbox"
+                  id="confirmField"
+                />
+                <label class="label-inline" for="confirmField"
+                  >Send a copy to yourself</label
+                >
+              </div>
+              <input class="button-primary" type="submit" value="Send" />
+            </fieldset>
+          </form>
+        </div>
+      </div>
+    </div>
     <script>
-      const quotesEl = document.querySelector("#quotes");
-      const errorEl = document.querySelector("#error");
-
-      function addQuote(quote, index) {
-        if (index > 10) {
-          return;
-        }
-        const quoteEl = document.createElement("article");
-        quoteEl.classList.add("quote");
-        quoteEl.textContent = quote.text;
-        quotesEl.appendChild(quoteEl);
-      }
-
-      async function getQuotes() {
+      const url = "https://hookb.in/6Jpom3WKwquLbb031X6E";
+      const formEl = document.querySelector("form");
+      formEl.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const formData = new FormData(formEl);
+        const formDataSerialized = Object.fromEntries(formData);
+        const jsonObject = {
+          ...formDataSerialized,
+          sendToSelf: formDataSerialized.sendToSelf ? true : false,
+        };
         try {
-          const response = await fetch("https://type.fit/api/quotes");
-          const quotes = await response.json();
-          quotes.forEach(addQuote);
+          const response = await fetch(url, {
+            method: "POST",
+            body: JSON.stringify(jsonObject),
+            headers: {
+              "Content-Type": "application/json",
+            },
+          });
+          const json = await response.json();
+          console.log(json);
         } catch (e) {
-          errorEl.style.display = "block";
           console.error(e);
+          alert("there as an error");
         }
-      }
-
-      document.addEventListener("DOMContentLoaded", getQuotes);
+      });
     </script>
   </body>
 </html>
