Got it matching the video

--- a/modal/index.html
+++ b/modal/index.html
@@ -4,105 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap");
-
-      body {
-        font-family: "Noto Sans JP", sans-serif;
-      }
-
-      main {
-        width: 80%;
-        height: 95%;
-        position: absolute;
-        top: 5%;
-        left: 10%;
-      }
-
-      h1 {
-        text-align: center;
-        font-size: 3em;
-      }
-
-      button {
-        width: 100%;
-        outline: none;
-        font-size: 2em;
-        cursor: pointer;
-      }
-
-      main.blur {
-        filter: blur(4px);
-      }
-
-      #background-cover {
-        background-color: rgb(145, 145, 145);
-        opacity: 0.7;
-        z-index: 2;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        display: none;
-        cursor: pointer;
-      }
-
-      .modal {
-        width: 500px;
-        height: auto;
-        background-color: white;
-        position: fixed;
-        top: -50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%);
-        z-index: 3;
-        border-radius: 10px;
-        padding: 10px;
-        padding: 0;
-        transition: ease-in-out top 0.5s;
-      }
-
-      .modal.open {
-        transition: ease-in-out top 0.7s;
-        top: 30%;
-      }
-
-      .modal-head h2 {
-        margin-top: 10px;
-        margin-bottom: 0;
-      }
-      .modal span.close {
-        position: absolute;
-        top: 8px;
-        right: 20px;
-        font-size: 20px;
-        color: rgb(119, 119, 119);
-        cursor: pointer;
-        user-select: none;
-      }
-      .modal span.close:hover {
-        color: black;
-      }
-      .modal-head {
-        padding-bottom: 5px;
-        padding-left: 20px;
-        border-bottom: solid #675f5f 1px;
-      }
-
-      .modal-content {
-        padding-left: 20px;
-      }
-    </style>
+    <title>Modal Example</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
       <h1>Modal Demo</h1>
       <p><button>Show Modal</button></p>
     </main>
-
-    <div class="modal active">
+    <div id="background-cover"></div>
+    <div class="modal">
       <span class="close">x</span>
       <div class="modal-head">
         <h2>Title</h2>
@@ -111,29 +22,29 @@
         <p>This is example text</p>
       </div>
     </div>
-    <div id="background-cover"></div>
     <script>
-      const buttonEl = document.querySelector("button");
-      const mainEl = document.querySelector("main");
-      const modalEl = document.querySelector(".modal");
-      const closeEl = document.querySelector(".close");
-      const backgroundCoverEl = document.querySelector("#background-cover");
+      const buttonEl = document.querySelector('button');
+      const mainEl = document.querySelector('main');
+      const modalEl = document.querySelector('.modal');
+      const closeEl = document.querySelector('.close');
+      const backgroundCoverEl = document.querySelector('#background-cover');
 
       function showModal() {
-        mainEl.classList.add("blur");
-        backgroundCoverEl.style.display = "block";
-        modalEl.classList.add("open");
+        mainEl.classList.add('blur');
+        backgroundCoverEl.style.display = 'block';
+        modalEl.classList.add('open');
       }
 
       function closeModal() {
-        mainEl.classList.remove("blur");
-        backgroundCoverEl.style.display = "none";
-        modalEl.classList.remove("open");
+        mainEl.classList.remove('blur');
+        backgroundCoverEl.style.display = 'none';
+        modalEl.classList.remove('open');
       }
 
-      buttonEl.addEventListener("click", showModal);
-      closeEl.addEventListener("click", closeModal);
-      backgroundCoverEl.addEventListener("click", closeModal);
+      // Event Listeners
+      buttonEl.addEventListener('click', showModal);
+      closeEl.addEventListener('click', closeModal);
+      backgroundCoverEl.addEventListener('click', closeModal);
     </script>
   </body>
 </html>
